--- a/css/core-theme.css
+++ b/css/core-theme.css
@@ -20,9 +20,25 @@ h1 {
 	font-weight: 700;
 	font-size: 6em;
 	text-align: center;
-	padding-top: 120px;
+	padding-top: 100px;
 	margin-top: 0px;
-	
+}
+
+h2 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 4em;
+	text-align: left;
+	padding-top: 100px;
+	margin-top: 0px;
+}
+
+h2.top {
+	padding-top: 50px;
+}
+
+.content-para.top {
+	padding-top: 50px;
 }
 
 .navbar {
@@ -36,7 +52,7 @@ nav {
 }
 
 nav div {
-	display:inline-block;
+	
 }
 
 .navbar-inner .navbar-text:hover {
@@ -48,65 +64,91 @@ nav div {
 .content-para {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
-	font-size: 26px;
-	padding-left: 250px;
-	padding-right: 250px;
-	padding-top: 25px;
+	font-size: 24px;
+	padding-top: 20px;
 	text-align: center;
 }
 
-.container-fluid.white {
+.content-para.bottom {
+	padding-bottom: 100px;
+}
+
+.bottom {
+	padding-bottom: 100px;
+}
+
+.spaced {
+	padding-bottom: 25px;
+}
+
+.content-section {
+	width: 100%;
+}
+
+.content-section.fullpage {
+	min-height: 100%;
+}
+
+.content-section.white {
 	background-color: #f5f5f5;
 }
 
-.container-fluid.white .content-para {
+.content-section.white .content-para {
 	color: #444444;
 }
 
-.container-fluid.white h1 {
+.content-section.white h1, .content-section.white h2 {
 	color: #074f66;
 }
 
-.container-fluid.lightblue {
+.content-section.lightblue {
 	background-color: #19a9e5;
 }
 
-.container-fluid.lightblue .content-para {
+.content-section.lightblue .content-para {
 	color: white;
 }
 
-.container-fluid.lightblue h1 {
+.content-section.lightblue .content-para a {
 	color: #074f66;
 }
 
-.container-fluid.sandybrown {
+.content-section.lightblue h1, .content-section.lightblue h2 {
+	color: #074f66;
+}
+
+.content-section.sandybrown {
 	background-color: #eebf3f;
 }
 
-.container-fluid.sandybrown .content-para {
+.content-section.sandybrown .content-para {
 	color: #074f66;
 }
 
-.container-fluid.sandybrown h1 {
+.content-section.sandybrown h1, .content-section.sandybrown h2 {
 	color: #19a9e5;
 }
 
-.container-fluid.darkslategray {
+.content-section.darkslategray {
 	background-color: #074f66;
 }
 
-.container-fluid.darkslategray .content-para {
+.content-section.darkslategray .content-para {
 	color: white;
 }
 
-.container-fluid.darkslategray h1 {
+.content-section.darkslategray h1, .content-section.darkslategray h2 {
 	color: #eebf3f;
 }
 
+.darkslategray {
+	background-color: #074f66;
+	color: white;
+}
 
-
-.container-fluid.fullpage {
-	min-height: 100%;
+.darkslategray:hover {
+	background-color: #074f66;
+	color: white;
 }
 
 .row.row-lightblue {
@@ -115,12 +157,21 @@ nav div {
 
 .navbar {
     text-align: center;
-    height: 100px;
+    min-height: 35px;
+    max-height: 100px;
+}
+.navbar-collapse {
+  text-align:center;
+}
+.navbar-nav {
+    display:inline-block;
+    float:none;
 }
 
 .navbar-inner .navbar-text {
 	height: 100%;
 	margin-top: 0px;
+	margin-bottom: 0px;
 	line-height: 100px;
 	color: #074f66;
 
@@ -128,10 +179,82 @@ nav div {
      Just because a vendor prefix is there, doesn't mean it will
      work in a browser made by that vendor either, it's just for
      future-proofing purposes I guess. */
+}
+
+.icon-bar {
+	height: 33px;
+}
+
+.nav li a {
+	padding: 0px;
+}
+
+.navbar-nav li:hover {
   -o-transition:.5s;
   -ms-transition:.5s;
   -moz-transition:.5s;
   -webkit-transition:.5s;
   /* ...and now for the proper property */
   transition:.5s;
+}
+
+.webPlayer {
+	height: 600px;
+	width: 100%;
+	background-color: blue;
+}
+
+#unityPlayer {
+	width: 100%;
+	height: 600px;
+	display: none;
+	text-align: center;
+	vertical-align: middle;
+}
+
+#installUnity:hover{
+	cursor: pointer;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { 
+
+.navbar  .navbar-default {
+	max-height: 500px;
+}
+
+}
+
+@media (max-width: 768px) { 
+
+.navbar {
+	max-height: 500px;
+}
+
+h1 {
+	font-size: 4em;
+	padding-top: 50px;
+}
+
+h2 {
+	font-size: 2em;
+	padding-top: 20px;
+}
+
+.content-para {
+	font-size: 12px;
+}
+
+.content-para.top {
+	padding-top: 20px;
+}
+
+.content-para.bottom {
+	padding-bottom: 20px;
+}
+
+nav {
+	font-size: 2em;
+}
+
 }
