--- a/css/core-theme.css
+++ b/css/core-theme.css
@@ -2,7 +2,6 @@
 body { 
 	width: 100%;
 	height: 100%;
-	padding-top: 70px;
 }
 
 html {
@@ -20,7 +19,7 @@ h1 {
 	font-weight: 700;
 	font-size: 6em;
 	text-align: center;
-	padding-top: 100px;
+	padding-top: 150px;
 	margin-top: 0px;
 }
 
@@ -231,9 +230,13 @@ nav div {
 	max-height: 500px;
 }
 
+.navbar-inner .navbar-text {
+	line-height: 75px;
+}
+
 h1 {
 	font-size: 4em;
-	padding-top: 50px;
+	padding-top: 100px;
 }
 
 h2 {
